Changes to People Display to allow student search on grade.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -94,8 +94,8 @@ person:
         edit: Edit Person
         import: Import People
         familyName: Family Name
-        givenName: Given Name
-        email: E-Mail
+        givenName: Given Names
+        details: Details
         category: Category Status
         photo: Photo
     edit: 
