Generate TimeTable Display ONLY as AJAX Prep work for Period Search
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -89,6 +89,8 @@ timetable:
         blank: My Timetable
         space: 'Space: %name%'
         staff: 'Staff: %name%'
+        grade: 'Grade: %name%'
+        student: 'Student: %name%'
 line:
     title:
         list: Manage Activity Lines
