Timeout and TimeTable Loader Image
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
+++ b/src/Busybee/TimeTableBundle/Resources/translations/BusybeeTimeTableBundle.en_GB.yml
@@ -91,6 +91,7 @@ timetable:
         staff: 'Staff: %name%'
         grade: 'Grade: %name%'
         student: 'Student: %name%'
+    loading: Loading Timetable
 line:
     title:
         list: Manage Activity Lines
