Add Symfony requirements to Acknowledgement Page
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -194,3 +194,6 @@ software:
         values: 'System Software'
 setting:
     required: ' The setting or service should be %required%.'
+symfony:
+    recommendations: Symfony Recommendations
+    problems: Symfony Problems
