Staff Activity Display
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/ActivityBundle/Resources/translations/BusybeeActivityBundle.en_GB.yml
+++ b/src/Busybee/ActivityBundle/Resources/translations/BusybeeActivityBundle.en_GB.yml
@@ -4,3 +4,8 @@ activity:
             exception: 'The activity cannot be displayed for the user type.'
     space:
         notAssigned: 'The activity does not have a fixed space assigned.'
+    attendance: Attendance
+    planner: Planner
+    markbook: Markbook
+    homework: Homework
+    internalAssessment: Internal Assessment
