Bundle Management Page WIP
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/Core/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -77,6 +77,8 @@ menu:
             manage: Institute
         page:
             roles: Page Roles
+        bundle:
+            list: Manage Bundles
     family:
         manage: Manage Family       
     people:
