Added Bundle Version Information
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
@@ -283,7 +283,18 @@ bundle:
     activate:
         excluded: 'The bundle %name% will not work with the "%conflict%" bundle.'
         success: 'The bundle %name% has changed status.'
-        required: 'The bundle %name% is required by the active bundle %conflict%.'
+        required: 'The bundle %name% is required by the active bundle %conflict% and will not be made in-active.'
         save:
-            failure: The bundle changes were not saved.
-            success: The bundle changes were saved.
+            failure: 'The bundle changes were not saved. %message%'
+            success: 'The bundle changes were saved.'
+        update:
+            notrequired: 'The update for %name% is not required.'
+    update:
+        button: 'Update Bundle'
+        required: 'Upgrade from %current% to %available% version.'
+        resource:
+            misconfigured: 'The bundle setting file does not contain a correctly formatted bundle version. Resource = %name% must contain a valid version in the Semantic Versioning Specification as defined at http://semver.org'
+            missing: 'The bundle has not set any resources to use.'
+            old: 'The resourse %name% has already been loaded.'
+            success: 'The resource %resource% was loaded into the settings.'
+            notavailable: 'The resource %resource% is not available.'
