--- a/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -118,7 +118,7 @@ security:
         required: The page you have requested is protected. Please sign in to continue. 
         no_table: "The table '%name%' does not exist in the system." 
         blocked_ip: Your computer has been blocked from this site due to incorrect username/password combinations.  Try again soon.
-        setting: 'You are not authorised to set the value settingName.'
+        setting: 'You are not authorised to set the value "settingName".  You need to have a role of "role%"'
     authentication: 
         failure: '%name% at IP:%remoteIP% has failed to authenticate correctly.'
     session:
