--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -117,3 +117,40 @@ grade:
         description: 'Limit the testing of grades in the timetable.'
         label: 'Monitor %grade%'
         toggle: 'Toggle monitor grade.'
+department:
+    edit:
+        title: Manage Department
+        description: ''
+    departments:
+        placeholder: Select Department to Manage
+    name:
+        label: Department Name
+    type:
+        label: Department Type
+        help: ''
+        placeholder: Select Department Type
+    nameShort:
+        label: Short Department Name
+    course:
+        title: Course Information
+        help: Link the department to the selected courses.
+        name:
+            placeholder: Select a Course
+        member: '%name%'
+    staff:
+        title: Staff Information
+        help: Link the department tot the selected staff members.
+        member:
+            name: '%name%'
+            placeholder: 'Select a Staff Member'
+            label: Staff Member Name
+            help: ''
+        type:
+            label: Staff Type
+            placeholder: Select Staff Type
+            help: Staff type is used to set system security.
+        member:
+            label: Staff Name
+            placeholder: Select Staff Member
+            help: ''
+
