Address/Locality Button to Extension Calls
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/AddressBundle/Resources/translations/BusybeeAddressBundle.en_GB.yml
+++ b/src/Busybee/People/AddressBundle/Resources/translations/BusybeeAddressBundle.en_GB.yml
@@ -29,3 +29,8 @@ address:
         close: Close Address Form
         add: Add Address
         reset: Refresh Address
+        delete: Delete Address
+    button:
+        erase: Remove Address
+        refresh: Refresh Address List
+        add: Create Address
