Composer Update.  Address, Locality and Phone Validation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/Core/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -204,3 +204,4 @@ google:
         state: Google returned an invalid state.
         user: 'Failed to retrieve a valid Google User: %message%'
     notAvailable: 'The user %name% (%email%) was not registered on the local system.'
+PasswordRequest: Password Request
