--- a/src/Busybee/People/LocalityBundle/Resources/translations/BusybeeLocalityBundle.en_GB.yml
+++ b/src/Busybee/People/LocalityBundle/Resources/translations/BusybeeLocalityBundle.en_GB.yml
@@ -29,3 +29,4 @@ locality:
     delete:
         success: 'Locality %name% Deleted'
         locked: 'Locality %name% is locked by the system.'
+    title: Locality
