--- a/src/Busybee/Core/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/translations/SystemBundle.en_GB.yml
@@ -117,6 +117,10 @@ bundle:
         missing: No description supplied.
         staff: Used to manage staff details.
         student:  Used to manage student details.
+        grade: Manage Grades for Students
+        phone: Manage Phone Details
+        locality: Manage Locality Details
+        address: Manage Address Details
     activate:
         excluded: 'The bundle %name% will not work with the "%conflict%" bundle.'
         success: 'The bundle %name% has changed status.'
